--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:migrate:make": "knex migrate:make",
     "db:migrate:undo": "knex migrate:down",
     "db:migrate:rollback": "knex migrate:rollback",
-    "vercel-build": "prisma generate && npm run db:migrate && next build"
+    "vercel-build": "npx prisma generate && npm run db:migrate && next build"
   },
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
