--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,4 @@
 
 NODE_ENV=development
 POSTGRES_PRISMA_URL="postgresql://postgres:admin123@localhost:5432/prismadb?schema=public"
+POSTGRES_URL="postgresql://postgres:admin123@localhost:5432/prismadb?schema=public"
