--- a/.env.development
+++ b/.env.development
@@ -5,10 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 NODE_ENV=development
-POSTGRES_URL="postgres://default:MdDE53PUpbtX@ep-gentle-block-97695935-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
-POSTGRES_PRISMA_URL="postgres://default:MdDE53PUpbtX@ep-gentle-block-97695935-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NON_POOLING="postgres://default:MdDE53PUpbtX@ep-gentle-block-97695935.us-east-1.postgres.vercel-storage.com:5432/verceldb"
-POSTGRES_USER="default"
-POSTGRES_HOST="ep-gentle-block-97695935-pooler.us-east-1.postgres.vercel-storage.com"
-POSTGRES_PASSWORD="MdDE53PUpbtX"
-POSTGRES_DATABASE="verceldb"
+POSTGRES_PRISMA_URL="postgresql://postgres:admin123@localhost:5432/prismadb?schema=public"
+POSTGRES_URL="postgresql://postgres:admin123@localhost:5432/prismadb?schema=public"
