--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
     "@prisma/client": "^5.4.2",
+    "@vercel/postgres": "^0.5.0",
     "dotenv": "^16.3.1",
     "knex": "^3.0.1",
     "next": "13.5.1",
